--- a/resources/assets/sass/_bootstrap-overrides.scss
+++ b/resources/assets/sass/_bootstrap-overrides.scss
@@ -12,3 +12,41 @@ $navbar-default-link-active-bg: darken($gray-lighter, 20%);
 $navbar-default-brand-color: $gray-dark;
 $navbar-default-link-color: $gray;
 $navbar-default-link-hover-color: $gray-dark;
+
+
+//== Buttons
+//
+//## For each of Bootstrap's buttons, define text, background and border color.
+
+$btn-font-weight:                normal;
+
+$btn-default-color:              $gray-dark;
+$btn-default-bg:                 #e7e7e7;
+$btn-default-border:             #ccc;
+
+$btn-primary-color:              $brand-primary;
+$btn-primary-bg:                 #fff;
+$btn-primary-border:             darken($brand-primary, 5%);
+
+$btn-success-color:              $brand-success;
+$btn-success-bg:                 #fff;
+$btn-success-border:             darken($brand-success, 5%);
+
+$btn-info-color:                 $brand-info;
+$btn-info-bg:                    #fff;
+$btn-info-border:                darken($brand-info, 5%);
+
+$btn-warning-color:              $brand-warning;
+$btn-warning-bg:                 #fff;
+$btn-warning-border:             darken($brand-warning, 5%);
+
+$btn-danger-color:               $brand-danger;
+$btn-danger-bg:                  #fff;
+$btn-danger-border:              darken($brand-danger, 5%);
+
+$btn-link-disabled-color:        $gray-light;
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius-base:         $border-radius-base;
+$btn-border-radius-large:        $border-radius-large;
+$btn-border-radius-small:        $border-radius-small;
