--- a/resources/assets/sass/_asset.scss
+++ b/resources/assets/sass/_asset.scss
@@ -1,3 +1,30 @@
+.carousel {
+  .item {
+    width: 100%;
+    height: 476px;
+
+    img {
+      width: auto;
+      height: 100%;
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
+
+  margin-bottom: 30px;
+}
+
+.slider-thumbnails {
+  img {
+    margin-bottom: 30px;
+    cursor: pointer;
+    border: 1px solid $gray-light;
+    border-radius: $border-radius-small;
+  }
+
+  margin-bottom: -15px;
+}
+
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
