Added basic filters

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -76,7 +76,7 @@ h2, h3, h4 {
   border-right: 1px solid $hr-border;
 }
 
-a[name]:not([href]) {
+a:not([href]) {
   color: inherit;
   &:hover {
     text-decoration: none;
