--- a/resources/assets/sass/_bootstrap-overrides.scss
+++ b/resources/assets/sass/_bootstrap-overrides.scss
@@ -1,5 +1,7 @@
 // Define before loading vars so the bootstrap uses this in calculations
 $brand-primary: #3592DB;
+$font-size-base: 15px;
+$text-color: #5a5a5a;
 
 // Load original vars so we may use them
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/variables";
