--- a/resources/assets/sass/_topbar.scss
+++ b/resources/assets/sass/_topbar.scss
@@ -14,6 +14,27 @@
     }
   }
 
+  .version-box {
+    float: left;
+    margin-left: 160px;
+    margin-top: 8px;
+    .version {
+      display: block;
+      font-weight: bold;
+    }
+  }
+
+  .social-box {
+    float: left;
+    margin-left: 30px;
+    margin-top: 8px;
+
+    .networks {
+      display: block;
+      font-weight: bold;
+    }
+  }
+
   .navbar {
     margin-bottom: 0;
   }
