Fixed login layout quirks

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,7 +16,7 @@
 @import "forum";
 @import "build-off";
 @import "stockroom";
-
+@import "login";
 body {
   overflow-y: scroll;
   padding-bottom: 40px;
