Made homepage look better on mobile devices

--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -1,5 +1,17 @@
 $carousel-height: 350px;
 
+.home-asset-types {
+  .asset-type {
+    a.symbol {
+      color: $text-color;
+      &:hover {
+        color: darken($text-color, 10%);
+        text-decoration: none;
+      }
+    }
+  }
+}
+
 #reddit-feeds {
   .reddit {
     padding: 0;
