--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,8 +33,11 @@ h2, h3, h4 {
 #site {
   background-color: #ffffff;
   box-shadow: 0 0 2px 0px rgba(0, 0, 0, .5);
-  border-radius: $border-radius-base;
   overflow-x: hidden;
+
+  @media (min-width: $screen-sm-min) {
+    border-radius: $border-radius-base;
+  }
 
   #sidebar {
     padding-top: 10px;
@@ -51,6 +54,8 @@ h2, h3, h4 {
     margin-left: -1px;
     padding-bottom: 15px;
   }
+
+
 }
 
 #logo {
