Changed cursor for filter group header to a pointer

--- a/resources/assets/sass/_list.scss
+++ b/resources/assets/sass/_list.scss
@@ -1,4 +1,9 @@
 #list-filters {
+  .filter-group {
+    .panel-heading {
+      cursor: pointer;
+    }
+  }
   .slider.slider-horizontal {
     width: 100%;
   }
