--- a/resources/assets/sass/_topbar.scss
+++ b/resources/assets/sass/_topbar.scss
@@ -35,6 +35,17 @@
     }
   }
 
+  .discord-box {
+    float: left;
+    margin-left: 30px;
+    margin-top: 8px;
+
+    .members {
+      display: block;
+      font-weight: bold;
+    }
+  }
+
   .navbar {
     margin-bottom: 0;
   }
