Added modding wiki

--- a/resources/assets/sass/wiki.scss
+++ b/resources/assets/sass/wiki.scss
@@ -1,5 +1,5 @@
 @import 'highlightjs';
-@import '../../../vendor/bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables';
+@import '../libs/bootstrap-sass/assets/stylesheets/bootstrap/variables';
 
 $sidebar-h-scale: 0.8;
 
