Fixed modding wiki

--- a/resources/assets/sass/_bootstrap-overrides.scss
+++ b/resources/assets/sass/_bootstrap-overrides.scss
@@ -15,6 +15,9 @@ $navbar-default-brand-color: $gray-dark;
 $navbar-default-link-color: $gray;
 $navbar-default-link-hover-color: $gray-dark;
 
+//$navbar-padding-vertical: 10px;
+$navbar-padding-horizontal: 0px;
+
 
 //== Buttons
 //
