--- a/resources/assets/sass/_asset.scss
+++ b/resources/assets/sass/_asset.scss
@@ -16,11 +16,16 @@
 }
 
 .slider-thumbnails {
+  display: flex;
+  flex-wrap: wrap;
+
   img {
     margin-bottom: 30px;
     cursor: pointer;
     border: 1px solid $gray-light;
     border-radius: $border-radius-small;
+    width: 116px;
+    margin: 7px;
   }
 
   margin-bottom: -15px;
