--- a/resources/assets/sass/_topbar.scss
+++ b/resources/assets/sass/_topbar.scss
@@ -1,7 +1,12 @@
 #top-bar {
   width: 100%;
-  height: 60px;
-  background-color: $gray-lighter;
+  height: 150px;
+  background-color: rgba(0,0,0,0.8);
+  color: #ffffff;
+
+  h1 {
+    float: left;
+  }
 
   #logo {
     margin: 0;
