--- a/resources/assets/sass/_bootstrap-overrides.scss
+++ b/resources/assets/sass/_bootstrap-overrides.scss
@@ -4,7 +4,7 @@ $brand-info: #42afe3;
 $brand-success: #97cd76;
 $brand-warning: #fce473;
 $brand-danger: #ed6c63;
-$font-family-sans-serif:  Helvetica, Arial, sans-serif;
+$font-family-sans-serif: 'Open Sans', sans-serif, Helvetica, Arial;
 $font-size-base: 15px;
 $text-color: #5a5a5a;
 
