--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,9 +17,14 @@
 @import "build-off";
 @import "stockroom";
 @import "login";
+
 body {
   overflow-y: scroll;
   padding-bottom: 40px;
+  font-weight: 200 !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
   font-weight: 200 !important;
 }
 
