Removed bower in favour of yarn

--- a/resources/assets/sass/_bootstrap-overrides.scss
+++ b/resources/assets/sass/_bootstrap-overrides.scss
@@ -4,7 +4,7 @@ $font-size-base: 15px;
 $text-color: #5a5a5a;
 
 // Load original vars so we may use them
-@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 
 $navbar-border-radius: 0px;
 $navbar-default-bg: darken($gray-lighter, 10%);
