--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 // Load bootstrap overrides before we load bootstrap so they're overwritten in the compile process
 @import "bootstrap-overrides";
-@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "helpers";
 @import "asset";
