Fixed bootstrap compiling issue

--- a/resources/assets/sass/wiki.scss
+++ b/resources/assets/sass/wiki.scss
@@ -1,5 +1,5 @@
 @import 'highlightjs';
-@import '../libs/bootstrap-sass/assets/stylesheets/bootstrap/variables';
+@import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
 $sidebar-h-scale: 0.8;
 
